# xdg

./: .gitmodules  CMakeLists.txt  CMakePresets.json
.github/workflows/: ci.yml  openmc-test.yml
docs/: glossary.rst
docs/methods/: acceleration_data_structures.rst  design_philosophy.rst
include/xdg/: available_device_probe.h  bbox.h  constants.h  device_ray.h  id_block_map.h  mesh_manager_interface.h  ray.h  ray_tracers.h  ray_tracing_interface.h  shared_constants.h  shared_enums.h  tetrahedron_contain.h  xdg.h
include/xdg/DPRT/: ray_tracer.h
include/xdg/DeePeeRT/: ray_tracer.h
include/xdg/cuBQL/: cuBQL_backend.h  intersection.h  ray_tracer.h  triangles.h
include/xdg/embree/: ray_tracer.h
include/xdg/geometry/: dp_math.h  plucker.h
include/xdg/gprt/: moab_util.h  ray.h  ray_tracer.h  rt_common.slangh  sharedCode.h  shared_structs.h
include/xdg/libmesh/: mesh_manager.h
include/xdg/moab/: direct_access.h  mesh_manager.h
src/: mesh_manager_interface.cpp  ray_tracing_interface.cpp  tetrahedron_contain.cpp  triangle_intersect.cpp  xdg.cpp
src/DPRT/: ray_tracer.cpp
src/DeePeeRT/: ray_tracer.cpp
src/cuBQL/: intersection.cpp  ray_tracer.cpp  triangles.cpp
src/embree/: ray_tracer.cpp
src/gprt/: dbl_deviceCode.slang  ray_tracer.cpp  sharedCode.h  tetrahedron_rt_shaders.slang  triangle_rt_shaders.slang
src/libmesh/: mesh_manager.cpp
src/moab/: mesh_manager.cpp
src/overlap_check/: overlap.cpp
tests/: CMakeLists.txt  mesh_mock.h  test_direct_ray_buffer_access.cpp  test_direct_ray_buffer_access_deviceCode.slang  test_direct_ray_buffer_access_shared.h  test_find_element.cpp  test_mesh_connectivity.cpp  test_mesh_internal.cpp  test_moab.cpp  test_no_geom.cpp  test_overlap_check.cpp  test_point_in_volume.cpp  test_ray_fire.cpp  test_ray_tracer_cross_check.cpp  test_xdg_interface.cpp  util.h
tools/: CMakeLists.txt  batch_point_in_volume.cpp  batch_ray_fire.cpp  dpr_test.cpp  omp_cuda_gprt_interop_test.cpp  omp_cuda_gprt_interop_test_deviceCode.slang  omp_cuda_gprt_interop_test_shared.h  openmp_memory_interop.cpp  openmp_memory_interop.h  overlap.cpp  overlap_check.cpp  particle_sim.cpp  ray-benchmark.cpp  ray_benchmark.cpp  ray_benchmark_deviceCode.slang  ray_benchmark_shared.h  ray_fire.cpp  tally_segments.h  walk_elements.h
tools/ray_benchmark/: CMakeLists.txt  ray_benchmark.cpp  ray_benchmark.h  ray_benchmark_deviceCode.slang  ray_benchmark_shared.h
